--- a/knowledge/opensource/instructlab/instructlab_intro/qna.yaml
+++ b/knowledge/opensource/instructlab/instructlab_intro/qna.yaml
@@ -4,15 +4,19 @@ type: knowledge
 domain: opensource
 created_by: nawow0531@naver.com
 document:
-  text: |
-    InstructLab is an open-source project to extend large language models with community-contributed knowledge and skills.
-document_outline:
-  text: |
-    Introduction
-    Features
-    How to Contribute
+  repo: "https://github.com/instructlab/instructlab"
+  commit: "HEAD"
+  patterns:
+    - path: "data.md"
+document_outline: |
+  Introduction
+  Features
+  How to Contribute
 seed_examples:
-  - input: "What is InstructLab?"
-    output: "InstructLab is an open-source framework that allows the community to contribute knowledge and skills to large language models."
-  - input: "How can you contribute to InstructLab?"
-    output: "By forking the repo, creating a new taxonomy topic, and submitting a pull request."
+  - context: ""
+    questions_and_answers:
+      - question: "What is InstructLab?"
+        answer: "InstructLab is an open-source framework that allows the community to contribute knowledge and skills to large language models."
+      - question: "How can you contribute to InstructLab?"
+        answer: "By forking the repo, creating a new taxonomy topic, and submitting a pull request."
+
