Fix qna.yaml schema to match v3 spec

--- a/knowledge/opensource/instructlab/instructlab_intro/qna.yaml
+++ b/knowledge/opensource/instructlab/instructlab_intro/qna.yaml
@@ -9,10 +9,10 @@ document:
   patterns:
     - "knowledge/opensource/instructlab/instructlab_intro/data.md"
 
-document_outline:
-  - "Introduction"
-  - "Features"
-  - "How to Contribute"
+document_outline: |
+  Introduction
+  Features
+  How to Contribute
 
 seed_examples:
   - context: "InstructLab is an open-source project..."
