--- a/knowledge/opensource/instructlab/instructlab_intro/qna.yaml
+++ b/knowledge/opensource/instructlab/instructlab_intro/qna.yaml
@@ -16,6 +16,7 @@ document_outline: |
 
 seed_examples:
   - context: "InstructLab is an open-source project..."
+    max_tokens: 512
     questions_and_answers:
       - question: "What is InstructLab?"
         answer: "InstructLab is an open-source framework that allows the community to contribute knowledge and skills to large language models."
@@ -25,6 +26,7 @@ seed_examples:
         answer: "Taxonomy-based knowledge injection, synthetic data generation, and support for compositional skills."
 
   - context: "InstructLab is useful for extending LLMs."
+    max_tokens: 512
     questions_and_answers:
       - question: "Who can contribute to InstructLab?"
         answer: "Anyone in the community can contribute."
@@ -34,6 +36,7 @@ seed_examples:
         answer: "Synthetic data based on taxonomies."
 
   - context: "Features of InstructLab include SDG and compositional skills."
+    max_tokens: 512
     questions_and_answers:
       - question: "What is SDG in InstructLab?"
         answer: "SDG stands for Synthetic Data Generation."
@@ -43,6 +46,7 @@ seed_examples:
         answer: "Yes, you can contribute patterns and data for SDG."
 
   - context: "The community can help InstructLab grow."
+    max_tokens: 512
     questions_and_answers:
       - question: "Why contribute to InstructLab?"
         answer: "To make LLMs more accurate and specialized for specific knowledge domains."
@@ -52,6 +56,7 @@ seed_examples:
         answer: "On GitHub under the official or forked repos."
 
   - context: "InstructLab uses a taxonomy for organizing knowledge."
+    max_tokens: 512
     questions_and_answers:
       - question: "What is a taxonomy in InstructLab?"
         answer: "A structured set of topics guiding how to generate and inject knowledge into LLMs."
